个人信息显示用户组

--- a/resources/html/user_info.html
+++ b/resources/html/user_info.html
@@ -17,7 +17,7 @@
 
         <div class="user-card">
             <div class="user-avatar" id="user-avatar" style="background-image: url('../image/logo.png');"></div>
-            <div class="username" id="username">用户名</div>
+            <div class="username" id="username">用户名<sup style="color: rgba(54, 162, 235, 1);">用户组</sup></div>
         </div>
 
         <div class="settings">
