修改admin界面用词

--- a/resources/html/admin.html
+++ b/resources/html/admin.html
@@ -69,7 +69,7 @@
         <!-- 近7日子模型调用次数 -->
         <div class="card mb-4">
             <div class="card-header">
-                近7日子模型调用次数
+                各模型使用总量统计
             </div>
             <div class="card-body">
                 <canvas id="submodelBarChart"></canvas>
